--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
-<html>
+<!DOCTYPE html>
+<html lang="es" >
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jorge Núñez Goslin | Desarrollador Web</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css" />
+        <link rel="stylesheet" href="asset/css/style.css" />
     </head>
     <body>
-        Mi página web
+        <section class="hero is-primary is-medium">
+            <div class="hero-head">
+                <header class="nav">
+                    <div class="container">
+                        <div class="nav-left">
+                            <a href="#" class="nav-item">
+                                <img src="asset/img/logo.png" alt="Jorge Núñez Goslin" >
+                            </a>
+                        </div>
+                        <div class="nav-right nav-menu">
+                            <a href="http://github.com/nunezgoslin" target="_blank" class="nav-item">
+                                Github
+                            </a>
+                            <a href="http://twitter.com/nunezgoslin" target="_blank" class="nav-item">
+                                Twitter
+                            </a>
+                            <a href="http://instagram.com/nunezgoslin" target="_blank" class="nav-item">
+                                Instagram
+                            </a>
+                            <a href="http://facebook.com/nunezgoslin" target="_blank" class="nav-item">
+                                Facebook
+                            </a>
+                            <span class="nav-item">
+                                <a href="http://youtube.com/nunezgoslin" target="_blank" class="button is-primary is-inverted">
+                                    <span class="icon"><i class="fa fa-youtube"></i></span>
+                                    <span>Youtube</span>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+                </header>
+            </div>
+        </section>
     </body>
 </html>
